# Freguesia

./: .gitignore  Makefile  READme.md  mysql_helper.py  padrao_freguesia.py  pyproject.toml
