[tool.poetry]
name = "mmpg"
version = "0.1.0"
description = ""
authors = ["MrDaviesNot <daviesaraujo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
sqlalchemy = "^2.0.38"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
pandas = "^2.2.3"
numpy = "^2.2.5"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
